--- a/web/css/home.css
+++ b/web/css/home.css
@@ -1,7 +1,8 @@
 
 .hero{
     text-align: center;
-    padding: 90px 20px 60px 20px;
+    padding: 70px 20px 60px 40px;
+    margin-bottom: 40px;
 }
 
 .hero img{
@@ -22,6 +23,7 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 35px;
     margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 .why-card img{
@@ -45,6 +47,7 @@
     border-radius: 20px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.15);
     transition: 0.3s;
+    margin-bottom: 50px;
 }
 
 .pet-card:hover{
@@ -61,4 +64,39 @@
 .pet-card h4{
     margin-top: 10px;
 }
+
+.mission-section {
+    background-image: url("../images/mission.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    text-align: center;
+    padding: 80px 20px;
+    border-radius: 20px;
+    position: relative;
+
+    color: #222; 
+    
+}
+
+.line {
+    width: 60px;
+    height: 2px;
+    background: #999;
+    margin: 25px auto;
+    border-radius: 10px;
+}
+
+.mission-section h2 {
+    font-weight: 600;
+}
+
+.mission-section p {
+    max-width: 700px;
+    margin: 0 auto;
+    line-height: 1.6;
+}
+
+
 
