--- a/web/css/style.css
+++ b/web/css/style.css
@@ -256,7 +256,7 @@ body {
     margin-bottom: 5px;
 }
 
-.form-card input[type="text"] {
+.form-card input[type="text"], input[type="number"] {
     padding: 10px 14px;
     border-radius: 12px;
     border: none;
