--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,4 +1,4 @@
-html, body {
+#ffde59html, body {
     height: 100%;
 }
 
@@ -164,7 +164,7 @@ body {
     background: #644d4d;
     color: white;
     padding: 25px 10px;
-    margin-top: 60px;
+    margin-top: auto;
 }
 
 .section.light{
@@ -187,15 +187,16 @@ body {
 .manage-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
+    gap: 50px;
     width: 65%;
-    margin: 45px auto 40px;
+    margin: 10px auto 70px;
 }
 
 .manage-card {
     background-color: #b4c0f6;
     border-radius: 20px;
-    padding: 30px;
+    padding: 25px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.08), 0 10px 25px rgba(0, 0, 0, 0.12);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
@@ -211,8 +212,18 @@ body {
 }
 
 .manage-card h3 {
+    color:#602376;
     font-size: 28px;
     margin-bottom: 10px;
+    text-shadow: 1px 1px 7px rgba(0,0,0,0.15);
+}
+
+.manage-card img.card-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 12px;
+    margin-bottom: 12px;
 }
 
 .sub {
@@ -235,6 +246,7 @@ body {
     padding: 35px 40px;
     border-radius: 25px;
     box-shadow: 0 8px 18px rgba(0,0,0,0.15);
+    margin-bottom: 50px;
 }
 
 /* Title */
@@ -331,6 +343,7 @@ body {
     margin-top: 15px;
     display: flex;
     gap: 12px;
+    justify-content: flex-end;
 }
 
 .bttn {
@@ -348,6 +361,22 @@ body {
     transform: translateY(-5px);
 }
 
+.bttn2 {
+    padding: 6px 30px;
+    background: #2498d4;
+    color: white;
+    border-radius: 20px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.bttn2:hover{
+    background:#4abf8a;
+    transform: translateY(-5px);
+}
 .page-header {
     position: relative;         
     width: 60%;                 
@@ -449,6 +478,50 @@ body {
     font-size: 17px;
     line-height: 1.7;
 }
+
+.line2 {
+    width: 100%;
+    height: 2px;
+    background: #999;
+    margin: 10px auto 25px;
+    border-radius: 10px;
+}
+
+.popup-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.popup-box {
+    background: #644d4d;
+    color: white;
+    padding: 20px 25px;
+    border-radius: 14px;
+    text-align: center;
+    width: 320px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
+
+.popup-box h3 {
+    margin-bottom: 10px;
+}
+
+#customPopup .popup-box button {
+    margin-top: 15px;
+    padding: 6px 18px;
+    border: none;
+    border-radius: 20px;
+    background: #5ce1e6;
+    color: #644d4d;
+    cursor: pointer;
+}
+
+#popupTitle { color: #edb4f6; }
 
 
 
